some IDEA auto fixups